--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   </style>
 </head>
 <body>
-  perspective: <input id="perspective" type="range" min="250" max="650" value="250" step="10" /> |
-  zoom: <input id="zoom" type="range" min=".2" max="1" value=".3" step=".1" />
+  <div align="center" class="controls">
+    perspective: <input id="perspective" type="range" min="250" max="650" value="250" step="10" /> |
+    zoom: <input id="zoom" type="range" min=".2" max="1" value=".3" step=".1" />
+  </div>
   <div id="canvas">
     <div class="row">
       <div class="instance">
