--- a/index.html
+++ b/index.html
@@ -15,22 +15,46 @@
 <body>
   <div align="center" class="controls">
     perspective: <input id="perspective" type="range" min="250" max="650" value="250" step="10" /> |
-    zoom: <input id="zoom" type="range" min=".2" max="1" value=".3" step=".1" />
+    zoom: <input id="zoom" type="range" min=".2" max="1" value=".3" step=".1" /> |
+    tilt relative to face: <input id="relative" type="checkbox" checked="checked" />
   </div>
   <div id="canvas">
     <div class="row">
       <div class="instance">
-        <div class="rect">
-          <div class="top"></div>
-          <div class="front"></div>
-          <div class="left"></div>
-          <div class="back"></div>
-          <div class="right"></div>
-          <div class="bottom"></div>
+        <div class="rectWrap">
+          <div class="rect">
+            <div class="top"></div>
+            <div class="front"></div>
+            <div class="left"></div>
+            <div class="back"></div>
+            <div class="right"></div>
+            <div class="bottom"></div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+  <script type="text/javascript">
+  // control the center rectangle with arrow keys
+  var xAngle = 0, yAngle = 0;
+  document.addEventListener('keydown', function(e) {
+    switch(e.keyCode) {
+      case 37: // left
+        yAngle -= 90;
+        break;
+      case 38: // up
+        xAngle += 90;
+        break;
+      case 39: // right
+        yAngle += 90;
+        break;
+      case 40: // down
+        xAngle -= 90;
+        break;
+    };
+    document.querySelector('.rect').style.transform = "rotateX("+xAngle+"deg) rotateY("+yAngle+"deg)";
+  }, false);
+  </script>
   <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
